frontend/test/should_pass/nestedmod/nestednestedmod/nestedmodbase.gm
node class Common
{
	name:string;
}
