frontend/test/should_fail/no_match_class_in_node.gm
node class N
{
	m:match<class mc>;
}
